changed data expl

--- a/Data exploration.ipynb
+++ b/Data exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import ssl\n",
-    "import fiona"
+    "import geopandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,31 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hexbin = fiona.open(\"Hexbins_1sqkm/Hexbins.shp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<open Collection 'Hexbins_1sqkm/Hexbins.shp:Hexbins', mode 'r' at 0x1174e5c18>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hexbin"
+    "hexbin =  geopandas.read_file(\"Hexbins_1sqkm/Hexbins.shp\")"
    ]
   },
   {
@@ -291,6 +271,13 @@
    ],
    "source": [
     "single_familiy_home_transactions['GRID_ID'].value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These give us"
    ]
   },
   {
